Revision history for Perl extension HTTP::BrowserDetect.

1.25 2011-07-12
    - Fix warnings about iceweasel test being defined twice (Paul Findlay)

1.24 2011-05-13
    - Removes dependency on Modern::Perl, which was accidentally introduced
      (Yoshiki Kurihara)
    
1.23 2011-05-02
    - Adds a browser_properties() call that exposes all the browser
      "properties" (Olivier Bilodeau)
    - Fixes issues where a Chrome string would return 1 to a ->nav45up check
      (Olivier Bilodeau)
    - Fixes issue where some WebKit/KHTML browsers returned 1 on ->gecko
      (Olivier Bilodeau)
    - Adds wince method (Windows CE) (Olivier Bilodeau)
    - Now detects Java UserAgent as a robot (Graham Barr)
    - Now detects Jakarta Commons-HttpClient as a Java client (Graham Barr)
    - UserAgent tests moved from YAML to JSON
    - Moves issue tracking to Github
    - Dist now includes META.json rather than META.yaml

1.22 2011-03-10
    - Adds Namoroka to list of Firefox browsers (Viacheslav Tykhanovskyi)

1.21 2010-12-23
    - Test suite now uses YAML rather than YAML::Tiny as YAML::Tiny 1.46
      refuses to load useragents.yaml
    - Alphabetically re-ordered some of the documentation
    
1.20 2010-11-23
    - Be a little more selective in marking ua as robot when contains search
      or seek (Graham Barr)
    - Add facebook crawler as a robot (Graham Barr) (Enrico Sorcinelli)
    
1.19 2010-09-24
    - Added support for WebOS (Jesse Thompson) RT #61437

1.18 2010-09-06
    - Added support for Netfront and Safari on Kindle

1.17 2010-08-28
    - Added support for Mobile Safari, Links and Elinks (Jon Jensen)
    - Added more UserAgents to test suite (Jon Jensen)

1.16 2010-08-19
    - Added support for the < 3.0 Safari public versions (Jon Jensen)
    - Added new UserAgents to useragents.yaml (Jon Jensen)

1.15 2010-08-18
    - Re-releasing after some folders unintentionally included in build

1.14 2010-08-18